# gpt-tkn-analyzer

./: LICENSE  README.md  pyproject.toml
notebooks/: analyze.ipynb
notebooks/output/: cl100k_base.text.csv  cl100k_base.token_summary.csv
src/analyze_gpt_tokenizer/: __init__.py  __main__.py  _types.py  config.py  utils.py
