[project]
name = "analyze-gpt-tokenizer"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "pillow>=10.2.0",
    "wordcloud>=1.9.3",
    "ipykernel>=6.29.3",
    "tiktoken>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"analyze-gpt-tokenizer" = "analyze_gpt_tokenizer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/analyze_gpt_tokenizer"]